// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders a title and a form 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="settings"
    >
      <h1>
        Palette 🎨
      </h1>
      <form>
        <div>
          <label
            for="start"
          >
            First color
          </label>
          <input
            id="start"
            type="color"
            value="#ff0000"
          />
        </div>
        <div>
          <label
            for="end"
          >
            Second color
          </label>
          <input
            id="end"
            type="color"
            value="#ffff00"
          />
        </div>
        <div>
          <label
            for="steps"
          >
            Steps
          </label>
          <input
            id="steps"
            type="number"
            value="10"
          />
        </div>
        <button>
          Draw
        </button>
      </form>
    </div>
    <div
      class="result"
    />
  </div>
</div>
`;

exports[`App when the form is changed and submitted renders a palette 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="settings"
    >
      <h1>
        Palette 🎨
      </h1>
      <form>
        <div>
          <label
            for="start"
          >
            First color
          </label>
          <input
            id="start"
            type="color"
            value="#cccccc"
          />
        </div>
        <div>
          <label
            for="end"
          >
            Second color
          </label>
          <input
            id="end"
            type="color"
            value="#abcdef"
          />
        </div>
        <div>
          <label
            for="steps"
          >
            Steps
          </label>
          <input
            id="steps"
            type="number"
            value="6"
          />
        </div>
        <button>
          Draw
        </button>
      </form>
    </div>
    <div
      class="result"
    >
      <div
        class="row"
      >
        <div
          class="color"
          style="background-color: rgb(204, 204, 204);"
        />
        <div
          class="color"
          style="background-color: rgb(163, 163, 163);"
        />
        <div
          class="color"
          style="background-color: rgb(122, 122, 122);"
        />
        <div
          class="color"
          style="background-color: rgb(82, 82, 82);"
        />
        <div
          class="color"
          style="background-color: rgb(41, 41, 41);"
        />
        <div
          class="color"
          style="background-color: rgb(0, 0, 0);"
        />
      </div>
      <div
        class="row"
      >
        <div
          class="color"
          style="background-color: rgb(214, 214, 214);"
        />
        <div
          class="color"
          style="background-color: rgb(178, 179, 181);"
        />
        <div
          class="color"
          style="background-color: rgb(142, 145, 148);"
        />
        <div
          class="color"
          style="background-color: rgb(106, 110, 114);"
        />
        <div
          class="color"
          style="background-color: rgb(70, 76, 81);"
        />
        <div
          class="color"
          style="background-color: rgb(34, 41, 48);"
        />
      </div>
      <div
        class="row"
      >
        <div
          class="color"
          style="background-color: rgb(224, 224, 224);"
        />
        <div
          class="color"
          style="background-color: rgb(193, 196, 198);"
        />
        <div
          class="color"
          style="background-color: rgb(162, 167, 173);"
        />
        <div
          class="color"
          style="background-color: rgb(130, 139, 147);"
        />
        <div
          class="color"
          style="background-color: rgb(99, 110, 122);"
        />
        <div
          class="color"
          style="background-color: rgb(68, 82, 96);"
        />
      </div>
      <div
        class="row"
      >
        <div
          class="color"
          style="background-color: rgb(235, 235, 235);"
        />
        <div
          class="color"
          style="background-color: rgb(209, 213, 217);"
        />
        <div
          class="color"
          style="background-color: rgb(182, 190, 198);"
        />
        <div
          class="color"
          style="background-color: rgb(156, 168, 180);"
        />
        <div
          class="color"
          style="background-color: rgb(129, 145, 161);"
        />
        <div
          class="color"
          style="background-color: rgb(103, 123, 143);"
        />
      </div>
      <div
        class="row"
      >
        <div
          class="color"
          style="background-color: rgb(245, 245, 245);"
        />
        <div
          class="color"
          style="background-color: rgb(223, 229, 234);"
        />
        <div
          class="color"
          style="background-color: rgb(202, 213, 223);"
        />
        <div
          class="color"
          style="background-color: rgb(180, 196, 213);"
        />
        <div
          class="color"
          style="background-color: rgb(159, 180, 202);"
        />
        <div
          class="color"
          style="background-color: rgb(137, 164, 191);"
        />
      </div>
      <div
        class="row"
      >
        <div
          class="color"
          style="background-color: rgb(255, 255, 255);"
        />
        <div
          class="color"
          style="background-color: rgb(238, 245, 252);"
        />
        <div
          class="color"
          style="background-color: rgb(221, 235, 249);"
        />
        <div
          class="color"
          style="background-color: rgb(205, 225, 245);"
        />
        <div
          class="color"
          style="background-color: rgb(188, 215, 242);"
        />
        <div
          class="color"
          style="background-color: rgb(171, 205, 239);"
        />
      </div>
    </div>
  </div>
</div>
`;
